gcc/testsuite/g++.old-deja/g++.pt/memtemp71.C
// { dg-do assemble  }

class A
{
  template<class T>T epsilon; // { dg-error "" } invalid member template
};
